Retter fullføringsporten for alle klienter
